--- a/sub/history.html
+++ b/sub/history.html
@@ -46,14 +46,14 @@
                         </div>
                     </li>
                     <li>
-                        <a href="#">사업분야</a>
+                        <a href="../sub/video.html">사업분야</a>
                         <div class="submenu_wrap">
                             <div class="submenu">
                                 <ul>
-                                    <li><a href="#">영상제작</a></li>
-                                    <li><a href="#">실시간 스트리밍</a></li>
-                                    <li><a href="#">오프라인 행사</a></li>
-                                    <li><a href="#">홍보 및 마케팅</a></li>
+                                    <li><a href="../sub/video.html">영상제작</a></li>
+                                    <li><a href="../sub/event.html">오프라인 행사</a></li>
+                                    <li><a href="../sub/streaming.html">실시간 스트리밍</a></li>
+                                    <li><a href="../sub/marketing.html">홍보 및 마케팅</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -97,10 +97,10 @@
                                     <button></button>
                                     <a href="javascript:return false;">사업분야</a>
                                     <ul class="m_submenu">
-                                        <li><a href="#">영상제작</a></li>
-                                        <li><a href="#">실시간 스트리밍</a></li>
-                                        <li><a href="#">오프라인 행사</a></li>
-                                        <li><a href="#">홍보 및 마케팅</a></li>
+                                        <li><a href="../sub/video.html">영상제작</a></li>
+                                        <li><a href="../sub/event.html">오프라인 행사</a></li>
+                                        <li><a href="../sub/streaming.html">실시간 스트리밍</a></li>
+                                        <li><a href="../sub/marketing.html">홍보 및 마케팅</a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -370,7 +370,7 @@
             <h2 class="typing02"></h2>
         </div>
         <div class="contact_banner_btn">
-            <a href="#">문의 바로가기</a>
+            <a href="../sub/inquiry.html">문의 바로가기</a>
         </div>
     </section>
     <!-- contact_banner_E -->
