--- a/sub/inquiry.html
+++ b/sub/inquiry.html
@@ -45,14 +45,14 @@
                         </div>
                     </li>
                     <li>
-                        <a href="#">사업분야</a>
+                        <a href="../sub/video.html">사업분야</a>
                         <div class="submenu_wrap">
                             <div class="submenu">
                                 <ul>
-                                    <li><a href="#">영상제작</a></li>
-                                    <li><a href="#">실시간 스트리밍</a></li>
-                                    <li><a href="#">오프라인 행사</a></li>
-                                    <li><a href="#">홍보 및 마케팅</a></li>
+                                    <li><a href="../sub/video.html">영상제작</a></li>
+                                    <li><a href="../sub/event.html">오프라인 행사</a></li>
+                                    <li><a href="../sub/streaming.html">실시간 스트리밍</a></li>
+                                    <li><a href="../sub/marketing.html">홍보 및 마케팅</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -64,7 +64,7 @@
                         <a href="../sub/promotion.html">홍보센터</a>
                     </li>
                     <li>
-                        <a href="#">상담문의</a>
+                        <a href="../sub/inquiry.html">상담문의</a>
                     </li>
                 </ul>
 
@@ -96,10 +96,10 @@
                                     <button></button>
                                     <a href="javascript:return false;">사업분야</a>
                                     <ul class="m_submenu">
-                                        <li><a href="#">영상제작</a></li>
-                                        <li><a href="#">실시간 스트리밍</a></li>
-                                        <li><a href="#">오프라인 행사</a></li>
-                                        <li><a href="#">홍보 및 마케팅</a></li>
+                                        <li><a href="../sub/video.html">영상제작</a></li>
+                                        <li><a href="../sub/event.html">오프라인 행사</a></li>
+                                        <li><a href="../sub/streaming.html">실시간 스트리밍</a></li>
+                                        <li><a href="../sub/marketing.html">홍보 및 마케팅</a></li>
                                     </ul>
                                 </li>
                                 <li>
