--- a/sub/event.html
+++ b/sub/event.html
@@ -126,74 +126,8 @@
         </div>
         <!-- visual_banner -->
 
-        <section id="company">
-            <div class="company-title s1">
-                <h5>회사개요</h5>
-                <div>
-                    <h2>
-                        혁신적인 기술과 창의적인 아이디어를 기반으로
-                        <br> 고객들에게 가치를 제공하는 Contopia입니다.
-                    </h2>
-                    <p>
-                        우리는 첨단 기술을 활용하여 산업을 혁신시키고, 디지털 시대의 요구에 부응하는 다양한 제품과 서비스를 제공합니다.
-                        고객 중심의 접근과 끊임없는 혁신을 통해 우리는 고객들에게 최상의 경험을 제공하고 있습니다.
-                        우리의 비전은 지속 가능한 미래를 위해 기술 혁신을 선도하는 것입니다.
-                        회사로서의 사회적 책임을 다하며, 지속 가능한 경제 성장과 사회 발전에 기여하고 있습니다.
-                    </p>
-                </div>
-            </div>
-            <div class="company-title s2">
-                <h5>조직구성</h5>
-                <div>
-                    <h2>
-                        전문성을 바탕으로 책임 경영을 하는 조직 구성
-                    </h2>
-                    <p>
-                        우리는 ‘시도하지 않으면 아무런 변화가 없다’는 경영철학을 가지고 모든 임직원이 함께 고민하며 새로운 변화를 만들어 갑니다.
-                    </p>
-                    <table>
-                        <tr>
-                            <td>경영기획팀</td>
-                        </tr>
-                        <tr>
-                            <td>C&C팀</td>
-                        </tr>
-                        <tr>
-                            <td>Creative팀</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-            <div class="company-title s3">
-                <h5>브랜드 스토리</h5>
-                <div>
-                    <h2>
-                        "콘텐츠의 이상향"
-                    </h2>
-                    <div class="center">
-                        <img src="../images/header/logo.svg" alt="콘토피아 로고">
-                        <p><span>contents</span> + <span>utopia</span></p>
-                    </div>
-                    <p>
-                        Contopia는 "콘텐츠"와 "유토피아"의 조합으로, 현실과 이상이 어우러진 창의적인 세계를 의미합니다. 우리의 브랜드
-                        스토리는 영감과 상상력의 경계를 넘어 사람들에게 새로운 경험과 감동을 선사합니다. 우리는 혁신적인 콘텐츠 제작을 통해
-                        이상적인 세계의 가능성을 탐구하며, 독창적인 아이디어와 감동적인 스토리텔링으로 사람들의 마음을 움직입니다.
-                        Contopia는 현실과 상상력의 경계를 뛰어넘는 창의적인 콘텐츠로 새로운 현실을 창조합니다.
-                    </p>
-                </div>
-            </div>
-            <div class="company-title s4">
-                <h5>오시는길</h5>
-                <div>
-                    <h2>
-                        (주)파운더
-                    </h2>
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.3437267500585!2d129.12243907638288!3d35.17298455772491!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356892c36d3607cf%3A0x83663b6a50b198f9!2zKOyjvCntjIzsmrTrjZQ!5e0!3m2!1sko!2skr!4v1702279369331!5m2!1sko!2skr"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-            </div>
+        <section id="video">
+            
         </section>
         <!-- company_E -->
 
