--- a/sub/portfolio/detail/01_film.html
+++ b/sub/portfolio/detail/01_film.html
@@ -38,34 +38,34 @@
                         <div class="submenu_wrap">
                             <div class="submenu">
                                 <ul>
-                                    <li><a href="../../../sub/company.html">회사개요</a></li>
-                                    <li><a href="../../../sub/history.html">회사연혁</a></li>
-                                    <li><a href="../../../sub/certification.html">특허/인증/수상</a></li>
+                                    <li><a href="../../company.html">회사개요</a></li>
+                                    <li><a href="../../sub/history.html">회사연혁</a></li>
+                                    <li><a href="../../sub/certification.html">특허/인증/수상</a></li>
                                 </ul>
                             </div>
                         </div>
                     </li>
                     <li>
-                        <a href="#">사업분야</a>
+                        <a href="../../video.html">사업분야</a>
                         <div class="submenu_wrap">
                             <div class="submenu">
                                 <ul>
-                                    <li><a href="#">영상제작</a></li>
-                                    <li><a href="#">실시간 스트리밍</a></li>
-                                    <li><a href="#">오프라인 행사</a></li>
-                                    <li><a href="#">홍보 및 마케팅</a></li>
+                                    <li><a href="../../video.html">영상제작</a></li>
+                                    <li><a href="../../streaming.html">실시간 스트리밍</a></li>
+                                    <li><a href="../../event.html">오프라인 행사</a></li>
+                                    <li><a href="../../marketing.html">홍보 및 마케팅</a></li>
                                 </ul>
                             </div>
                         </div>
                     </li>
                     <li>
-                        <a href="../../../sub/portfolio.html">포트폴리오</a>
+                        <a href="../../portfolio.html">포트폴리오</a>
                     </li>
                     <li>
-                        <a href="../../../sub/promotion.html">홍보센터</a>
+                        <a href="../../promotion.html">홍보센터</a>
                     </li>
                     <li>
-                        <a href="../../../sub/inquiry.html">상담문의</a>
+                        <a href="../../inquiry.html">상담문의</a>
                     </li>
                 </ul>
 
@@ -86,31 +86,31 @@
                             <ul>
                                 <li>
                                     <button></button>
-                                    <a href="javascript:return false;">회사소개</a>
+                                    <a href="../../company.html">회사소개</a>
                                     <ul class="m_submenu">
-                                        <li><a href="../../../sub/company.html">회사개요</a></li>
-                                        <li><a href="../../../sub/history.html">회사연혁</a></li>
-                                        <li><a href="../../../sub/certification.html">특허/인증/수상</a></li>
+                                        <li><a href="../../company.html">회사개요</a></li>
+                                        <li><a href="../../history.html">회사연혁</a></li>
+                                        <li><a href="../../certification.html">특허/인증/수상</a></li>
                                     </ul>
                                 </li>
                                 <li>
                                     <button></button>
-                                    <a href="javascript:return false;">사업분야</a>
+                                    <a href="../../video.html">사업분야</a>
                                     <ul class="m_submenu">
-                                        <li><a href="#">영상제작</a></li>
-                                        <li><a href="#">실시간 스트리밍</a></li>
-                                        <li><a href="#">오프라인 행사</a></li>
-                                        <li><a href="#">홍보 및 마케팅</a></li>
+                                        <li><a href="../../video.html">영상제작</a></li>
+                                        <li><a href="../../streaming.html">실시간 스트리밍</a></li>
+                                        <li><a href="../../event.html">오프라인 행사</a></li>
+                                        <li><a href="../../marketing.html">홍보 및 마케팅</a></li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="../../../sub/portfolio.html">포트폴리오</a>
+                                    <a href="../../portfolio.html">포트폴리오</a>
                                 </li>
                                 <li>
-                                    <a href="../../../sub/promotion.html">홍보센터</a>
+                                    <a href="../../promotion.html">홍보센터</a>
                                 </li>
                                 <li>
-                                    <a href="../../../sub/inquiry.html">상담문의</a>
+                                    <a href="../../inquiry.html">상담문의</a>
                                 </li>
                             </ul>
                         </li>
@@ -146,7 +146,7 @@
                 <h2 class="typing02"></h2>
             </div>
             <div class="contact_banner_btn">
-                <a href="#">문의 바로가기</a>
+                <a href="../../inquiry.html">문의 바로가기</a>
             </div>
         </section>
         <!-- contact_banner_E -->
