--- a/index.html
+++ b/index.html
@@ -186,28 +186,28 @@
                             <img src="images/main/business_introduce1.png" alt="">
                             <div class="text t1">
                                 <p>영상제작</p>
-                                <a href="#">자세히보기</a>
+                                <a href="sub/video.html">자세히보기</a>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <img src="images/main/business_introduce2.png" alt="">
                             <div class="text">
                                 <p>오프라인행사</p>
-                                <a href="#">자세히보기</a>
+                                <a href="sub/event.html">자세히보기</a>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <img src="images/main/business_introduce3.png" alt="">
                             <div class="text t3">
                                 <p>실시간스트리밍</p>
-                                <a href="#">자세히보기</a>
+                                <a href="sub/streaming.html">자세히보기</a>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <img src="images/main/business_introduce4.png" alt="">
                             <div class="text">
                                 <p>홍보 및 마케팅</p>
-                                <a href="#">자세히보기</a>
+                                <a href="sub/marketing.html">자세히보기</a>
                             </div>
                         </div>
                         <!-- <div class="swiper-slide">Slide 5</div>
