--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
                         </div>
                     </li>
                     <li>
-                        <a href="sub/video.html">사업분야</a>
+                        <a href="sub/business.html">사업분야</a>
                         <div class="submenu_wrap">
                             <div class="submenu">
                                 <ul>
-                                    <li><a href="sub/video.html">영상제작</a></li>
-                                    <li><a href="sub/event.html">오프라인 행사</a></li>
-                                    <li><a href="sub/streaming.html">실시간 스트리밍</a></li>
-                                    <li><a href="sub/marketing.html">홍보 및 마케팅</a></li>
+                                    <li><a href="sub/business.html#video">영상제작</a></li>
+                                    <li><a href="sub/business.html#event">오프라인 행사</a></li>
+                                    <li><a href="sub/business.html#streaming">실시간 스트리밍</a></li>
+                                    <li><a href="sub/business.html#marketing">홍보 및 마케팅</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -93,7 +93,7 @@
                             <ul>
                                 <li>
                                     <button></button>
-                                    <a href="javascript:return false;">회사소개</a>
+                                    <a href="sub/company.html">회사소개</a>
                                     <ul class="m_submenu">
                                         <li><a href="sub/company.html">회사개요</a></li>
                                         <li><a href="sub/history.html">회사연혁</a></li>
@@ -102,12 +102,12 @@
                                 </li>
                                 <li>
                                     <button></button>
-                                    <a href="javascript:return false;">사업분야</a>
+                                    <a href="sub/business.html">사업분야</a>
                                     <ul class="m_submenu">
-                                        <li><a href="sub/video.html">영상제작</a></li>
-                                        <li><a href="sub/event.html">오프라인 행사</a></li>
-                                        <li><a href="sub/streaming.html">실시간 스트리밍</a></li>
-                                        <li><a href="sub/marketing.html">홍보 및 마케팅</a></li>
+                                        <li><a href="sub/business.html#video">영상제작</a></li>
+                                        <li><a href="sub/business.html#event">오프라인 행사</a></li>
+                                        <li><a href="sub/business.html#streaming">실시간 스트리밍</a></li>
+                                        <li><a href="sub/business.html#marketing">홍보 및 마케팅</a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -149,33 +149,33 @@
                     <ul class="business_menu">
                         <li>
                             <p>영상제작</p>
-                            <a href="sub/video.html">자세히보기</a>
+                            <a href="sub/business.html#video">자세히보기</a>
                         </li>
                         <li>
                             <p>오프라인행사</p>
-                            <a href="sub/event.html">자세히보기</a>
+                            <a href="sub/business.html#event">자세히보기</a>
                         </li>
                         <li>
                             <p>실시간스트리밍</p>
-                            <a href="sub/streaming.html">자세히보기</a>
+                            <a href="sub/business.html#streaming">자세히보기</a>
                         </li>
                         <li>
                             <p>홍보 및 마케팅</p>
-                            <a href="sub/marketing.html">자세히보기</a>
+                            <a href="sub/business.html#marketing">자세히보기</a>
                         </li>
                     </ul>
                     <ul class="business_bg">
                         <li>
-                            <img src="images/main/business_introduce1.png" alt="">
+                            <img src="images/main/business_introduce1.jpg" alt="">
                         </li>
                         <li>
                             <img src="images/main/business_introduce2.png" alt="">
                         </li>
                         <li>
-                            <img src="images/main/business_introduce3.png" alt="">
+                            <img src="images/main/business_introduce3.jpg" alt="">
                         </li>
                         <li>
-                            <img src="images/main/business_introduce4.png" alt="">
+                            <img src="images/main/business_introduce4.jpg" alt="">
                         </li>
                     </ul>
                 </div>
@@ -183,7 +183,7 @@
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img src="images/main/business_introduce1.png" alt="">
+                            <img src="images/main/business_introduce1.jpg" alt="">
                             <div class="text t1">
                                 <p>영상제작</p>
                                 <a href="sub/video.html">자세히보기</a>
@@ -197,14 +197,14 @@
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <img src="images/main/business_introduce3.png" alt="">
+                            <img src="images/main/business_introduce3.jpg" alt="">
                             <div class="text t3">
                                 <p>실시간스트리밍</p>
                                 <a href="sub/streaming.html">자세히보기</a>
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <img src="images/main/business_introduce4.png" alt="">
+                            <img src="images/main/business_introduce4.jpg" alt="">
                             <div class="text">
                                 <p>홍보 및 마케팅</p>
                                 <a href="sub/marketing.html">자세히보기</a>
