--- a/sub/certification.html
+++ b/sub/certification.html
@@ -45,14 +45,14 @@
                         </div>
                     </li>
                     <li>
-                        <a href="../sub/video.html">사업분야</a>
+                        <a href="../sub/business.html">사업분야</a>
                         <div class="submenu_wrap">
                             <div class="submenu">
                                 <ul>
-                                    <li><a href="../sub/video.html">영상제작</a></li>
-                                    <li><a href="../sub/event.html">오프라인 행사</a></li>
-                                    <li><a href="../sub/streaming.html">실시간 스트리밍</a></li>
-                                    <li><a href="../sub/marketing.html">홍보 및 마케팅</a></li>
+                                    <li><a href="../sub/business.html#video">영상제작</a></li>
+                                    <li><a href="../sub/business.html#event">오프라인 행사</a></li>
+                                    <li><a href="../sub/business.html#streaming">실시간 스트리밍</a></li>
+                                    <li><a href="../sub/business.html#marketing">홍보 및 마케팅</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -85,7 +85,7 @@
                             <ul>
                                 <li>
                                     <button></button>
-                                    <a href="javascript:return false;">회사소개</a>
+                                    <a href="../sub/company.html">회사소개</a>
                                     <ul class="m_submenu">
                                         <li><a href="../sub/company.html">회사개요</a></li>
                                         <li><a href="../sub/history.html">회사연혁</a></li>
@@ -94,12 +94,12 @@
                                 </li>
                                 <li>
                                     <button></button>
-                                    <a href="javascript:return false;">사업분야</a>
+                                    <a href="../sub/business.html">사업분야</a>
                                     <ul class="m_submenu">
-                                        <li><a href="../sub/video.html">영상제작</a></li>
-                                        <li><a href="../sub/event.html">오프라인 행사</a></li>
-                                        <li><a href="../sub/streaming.html">실시간 스트리밍</a></li>
-                                        <li><a href="../sub/marketing.html">홍보 및 마케팅</a></li>
+                                        <li><a href="../sub/business.html#video">영상제작</a></li>
+                                        <li><a href="../sub/business.html#event">오프라인 행사</a></li>
+                                        <li><a href="../sub/business.html#streaming">실시간 스트리밍</a></li>
+                                        <li><a href="../sub/business.html#marketing">홍보 및 마케팅</a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -135,6 +135,11 @@
         
                 <ul class="awards-list item-list">
                     <li class="patent_auth"><a>
+                            <div class="img"><img src="../images/sub/certification/patent_auth20.jpg"></div><span
+                                class="cate">대한민국 특허청</span>
+                            <p>비즈니스 영상명함 제작 및 관리 서비스 제공 시스템</p>
+                        </a></li>
+                    <li class="patent_auth"><a>
                             <div class="img"><img src="../images/sub/certification/patent_auth19.jpg"></div><span
                                 class="cate">부산광역시</span>
                             <p>부산대표 기술창업기업 인증서</p>
@@ -152,7 +157,7 @@
                     <li class="patent_auth"><a>
                             <div class="img"><img src="../images/sub/certification/patent_auth16.jpg"></div><span class="cate">대한민국
                                 특허청</span>
-                            <p>비즈니스 영상명함 제작 및 관리 서비스 제공 시스템</p>
+                            <p>비즈니스 영상명함 제작 서비스 제공 시스템</p>
                         </a></li>
                         <li class="award"><a>
                             <div class="img"><img src="../images/sub/certification/award4.jpg"></div>
