--- a/sub/promotion.html
+++ b/sub/promotion.html
@@ -45,14 +45,14 @@
                         </div>
                     </li>
                     <li>
-                        <a href="../sub/video.html">사업분야</a>
+                        <a href="../sub/business.html">사업분야</a>
                         <div class="submenu_wrap">
                             <div class="submenu">
                                 <ul>
-                                    <li><a href="../sub/video.html">영상제작</a></li>
-                                    <li><a href="../sub/event.html">오프라인 행사</a></li>
-                                    <li><a href="../sub/streaming.html">실시간 스트리밍</a></li>
-                                    <li><a href="../sub/marketing.html">홍보 및 마케팅</a></li>
+                                    <li><a href="../sub/business.html#video">영상제작</a></li>
+                                    <li><a href="../sub/business.html#event">오프라인 행사</a></li>
+                                    <li><a href="../sub/business.html#streaming">실시간 스트리밍</a></li>
+                                    <li><a href="../sub/business.html#marketing">홍보 및 마케팅</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -85,7 +85,7 @@
                             <ul>
                                 <li>
                                     <button></button>
-                                    <a href="javascript:return false;">회사소개</a>
+                                    <a href="../sub/company.html">회사소개</a>
                                     <ul class="m_submenu">
                                         <li><a href="../sub/company.html">회사개요</a></li>
                                         <li><a href="../sub/history.html">회사연혁</a></li>
@@ -94,12 +94,12 @@
                                 </li>
                                 <li>
                                     <button></button>
-                                    <a href="javascript:return false;">사업분야</a>
+                                    <a href="../sub/business.html">사업분야</a>
                                     <ul class="m_submenu">
-                                        <li><a href="../sub/video.html">영상제작</a></li>
-                                        <li><a href="../sub/event.html">오프라인 행사</a></li>
-                                        <li><a href="../sub/streaming.html">실시간 스트리밍</a></li>
-                                        <li><a href="../sub/marketing.html">홍보 및 마케팅</a></li>
+                                        <li><a href="../sub/business.html#video">영상제작</a></li>
+                                        <li><a href="../sub/business.html#event">오프라인 행사</a></li>
+                                        <li><a href="../sub/business.html#streaming">실시간 스트리밍</a></li>
+                                        <li><a href="../sub/business.html#marketing">홍보 및 마케팅</a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -135,43 +135,22 @@
                 <ul id="post_list" data-post_type="post_pr" data-page_int="5" data-posts_per_page="12" data-post_scroll="200"
                     class="pr-list item-list">
                     <li class="notice">
-                        <a href="#">
-                            <div class="img"><img src="../images/sub/promotion/new_year.jpg">
-                            </div>
-                            <p>새해복 많이 받으세요</p>
-                            <div class="cate-box"><span class="cate">공지사항</span><span class="date">2024.01.01</span></div>
-                        </a>
-                    </li>
-                    <li class="news">
-                        <a href="#">
-                            <div class="img"><img src="../images/sub//promotion/promotion1.png"></div>
-                            <p>(주)파운더 NIPA 우수기업 선정</p>
-                            <div class="cate-box"><span class="cate">뉴스</span><span class="date">2023.11.30</span></div>
-                        </a>
-                    </li>
-                    <li class="notice">
-                        <a href="#">
-                            <div class="img"><img src="../images/sub//promotion/promotion1.png">
+                        <a href="../sub/promotion/detail/01_post.html">
+                            <div class="img"><img src="../images/sub//promotion/promotion1.png" alt="콘토피아 홈페이지 리뉴얼">
                             </div>
                             <p>콘토피아 홈페이지 리뉴얼 오픈 안내</p>
                             <div class="cate-box"><span class="cate">공지사항</span><span class="date">2023.11.14</span></div>
                         </a>
                     </li>
                     <li class="notice">
-                        <a href="#">
-                            <div class="img"><img src="../images/sub//promotion/promotion1.png">
+                        <a href="../sub/promotion/detail/01_post.html">
+                            <div class="img"><img src="../images/sub/promotion/2024year.png" alt="2024 새해인사">
                             </div>
-                            <p>하이라이토피아 웹플랫폼 개발</p>
-                            <div class="cate-box"><span class="cate">공지사항</span><span class="date">2023.11.07</span></div>
+                            <p>새해복 많이 받으세요</p>
+                            <div class="cate-box"><span class="cate">공지사항</span><span class="date">2024.01.01</span></div>
                         </a>
                     </li>
-                    <li class="notice">
-                        <a href="#">
-                            <div class="img"><img src="../images/sub//promotion/special_day.jpg"></div>
-                            <p>넉넉한 마음으로 풍성한 한가위 보내시길 바랍니다</p>
-                            <div class="cate-box"><span class="cate">공지사항</span><span class="date">2023.09.27</span></div>
-                        </a>
-                    </li>
+                    
                 </ul>
             </div>
         </section>
