--- a/sub/business.html
+++ b/sub/business.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
         rel="stylesheet">
     <!-- css -->
-    <link rel="stylesheet" href="../css/company.css">
+    <link rel="stylesheet" href="../css/business.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
     <!-- js -->
@@ -50,10 +50,10 @@
                         <div class="submenu_wrap">
                             <div class="submenu">
                                 <ul>
-                                    <li><a href="../sub/business.html#video">영상제작</a></li>
-                                    <li><a href="../sub/business.html#event">오프라인 행사</a></li>
-                                    <li><a href="../sub/business.html#streaming">실시간 스트리밍</a></li>
-                                    <li><a href="../sub/business.html#marketing">홍보 및 마케팅</a></li>
+                                    <li><a href="#video">영상제작</a></li>
+                                    <li><a href="#event">오프라인 행사</a></li>
+                                    <li><a href="#streaming">실시간 스트리밍</a></li>
+                                    <li><a href="#marketing">홍보 및 마케팅</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -97,10 +97,10 @@
                                     <button></button>
                                     <a href="../sub/business.html">사업분야</a>
                                     <ul class="m_submenu">
-                                        <li><a href="../sub/business.html#video">영상제작</a></li>
-                                        <li><a href="../sub/business.html#event">오프라인 행사</a></li>
-                                        <li><a href="../sub/business.html#streaming">실시간 스트리밍</a></li>
-                                        <li><a href="../sub/business.html#marketing">홍보 및 마케팅</a></li>
+                                        <li><a href="#video">영상제작</a></li>
+                                        <li><a href="#event">오프라인 행사</a></li>
+                                        <li><a href="#streaming">실시간 스트리밍</a></li>
+                                        <li><a href="#marketing">홍보 및 마케팅</a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -121,81 +121,60 @@
         <!-- header_E -->
 
         <div id="visual_banner">
-            <img src="../images/sub/company/company.jpg" alt="회사개요 대표이미지">
-            <p>회사개요</p>
+            <img src="../images/sub/company/company.jpg" alt="사업분야 대표이미지">
+            <p>사업분야</p>
         </div>
         <!-- visual_banner -->
 
-        <section id="company">
-            <div class="company-title s1">
-                <h5>회사개요</h5>
-                <div>
-                    <h2>
-                        혁신적인 기술과 창의적인 아이디어를 기반으로
-                        <br> 고객들에게 가치를 제공하는 Contopia입니다.
-                    </h2>
-                    <p>
-                        우리는 첨단 기술을 활용하여 산업을 혁신시키고, 디지털 시대의 요구에 부응하는 다양한 제품과 서비스를 제공합니다.
-                        고객 중심의 접근과 끊임없는 혁신을 통해 우리는 고객들에게 최상의 경험을 제공하고 있습니다.
-                        우리의 비전은 지속 가능한 미래를 위해 기술 혁신을 선도하는 것입니다.
-                        회사로서의 사회적 책임을 다하며, 지속 가능한 경제 성장과 사회 발전에 기여하고 있습니다.
-                    </p>
-                </div>
+        <section id="business">
+            <h2>하나의 프로젝트를 완성하기 위해 <br> 디테일한 부분까지 <span>집중</span>하고 <span>몰입</span>하여 <br> <span>완벽함을 만들어 냅니다.</span></h2>
+            <div class="business_wrap">
+                <ul>
+                    <li id="video">
+                        <div>
+                            <img src="../images/main/business_introduce1.png" alt="영상제작">
+                        </div>
+                        <div class="text_box">
+                            <h2>영상제작</h2>
+                            <p>스토리보드, 영상편집, 후속 관리까지 전반적인 제작 과정을 수행합니다. 고객의 요구와 목적에 맞게 고품질의 비주얼 콘텐츠를 제공하여 브랜드 인지도 향상, 마케팅 전략 강화, 정보 전달 등 다양한 목적을 달성합니다. 콘토피아는 디지털 기술의 발전과 시장의 다양한 요구에 빠르게 대응하며, 고객과 시청자들에게 가치 있는 경험을 제공하고자 합니다.</p>
+                            <div class="portfolio_btn">
+                                <a href="portfolio.html">포트폴리오 바로가기</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li id="event">
+                        <div class="text_box">
+                            <h2>오프라인 행사</h2>
+                            <p>고객의 목표와 요구사항을 바탕으로 행사의 전반적인 기획, 장소 선정, 참가자 관리, 프로모션, 운영 및 후속 관리까지 종합적으로 지원합니다.
+                                고객의 브랜드 인지도 향상, 커뮤니케이션 강화, 타켓 오디언스와의 연결을 위해 전문적이고 창의적인 행사를 제공합니다.</p>
+                        </div>
+                        <div>
+                            <img src="../images/main/business_introduce2.png" alt="오프라인 행사">
+                        </div>
+                    </li>
+                    <li id="streaming">
+                        <div>
+                            <img src="../images/main/business_introduce3.png" alt="실시간 스트리밍">
+                        </div>
+                        <div class="text_box">
+                            <h2>실시간 스트리밍</h2>
+                            <p>실시간 비디오, 오디오, 이벤트 등의 콘텐츠를 전송하는 서비스를 제공합니다. 안정적이고 고품질의 방송 환경을 제공하며, </p>
+                        </div>
+                    </li>
+                    <li id="marketing">
+                        <div class="text_box">
+                            <h2>홍보 및 마케팅</h2>
+                            <p>기업이나 브랜드의 가치를 대중에게 전달하고 홍보하는 활동을 전문적으로 수행합니다. 타켓 오디언스를 분석하고, 전략전인 커뮤니케이션 계획을 세우며, 다양한 미디어 체널을 활용하여 광고, PR, 소셜 미디어 마케팅 등을 실행합니다. 콘토리아는 디지털 트랜드 변화에 빠르게 대응하며, 데이터 기반의 마케팅 전략을 강화해 나갈 것 입니다.</p>
+                        </div>
+                        <div>
+                            <img src="../images/main/business_introduce4.png" alt="홍보 및 마케팅">
+                        </div>
+                    </li>
+                </ul>
             </div>
-            <div class="company-title s2">
-                <h5>조직구성</h5>
-                <div>
-                    <h2>
-                        전문성을 바탕으로 책임 경영을 하는 조직 구성
-                    </h2>
-                    <p>
-                        우리는 ‘시도하지 않으면 아무런 변화가 없다’는 경영철학을 가지고 모든 임직원이 함께 고민하며 새로운 변화를 만들어 갑니다.
-                    </p>
-                    <table>
-                        <tr>
-                            <td>경영기획팀</td>
-                        </tr>
-                        <tr>
-                            <td>C&C팀</td>
-                        </tr>
-                        <tr>
-                            <td>Creative팀</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-            <div class="company-title s3">
-                <h5>브랜드 스토리</h5>
-                <div>
-                    <h2>
-                        "콘텐츠의 이상향"
-                    </h2>
-                    <div class="center">
-                        <img src="../images/header/logo.svg" alt="콘토피아 로고">
-                        <p><span>contents</span> + <span>utopia</span></p>
-                    </div>
-                    <p>
-                        Contopia는 "콘텐츠"와 "유토피아"의 조합으로, 현실과 이상이 어우러진 창의적인 세계를 의미합니다. 우리의 브랜드
-                        스토리는 영감과 상상력의 경계를 넘어 사람들에게 새로운 경험과 감동을 선사합니다. 우리는 혁신적인 콘텐츠 제작을 통해
-                        이상적인 세계의 가능성을 탐구하며, 독창적인 아이디어와 감동적인 스토리텔링으로 사람들의 마음을 움직입니다.
-                        Contopia는 현실과 상상력의 경계를 뛰어넘는 창의적인 콘텐츠로 새로운 현실을 창조합니다.
-                    </p>
-                </div>
-            </div>
-            <div class="company-title s4">
-                <h5>오시는길</h5>
-                <div>
-                    <h2>
-                        (주)파운더
-                    </h2>
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.3437267500585!2d129.12243907638288!3d35.17298455772491!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356892c36d3607cf%3A0x83663b6a50b198f9!2zKOyjvCntjIzsmrTrjZQ!5e0!3m2!1sko!2skr!4v1702279369331!5m2!1sko!2skr"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-            </div>
+
         </section>
-        <!-- company_E -->
+        <!-- business_E -->
 
         <section id="contact_banner">
             <div class="contact_banner_text">
