--- a/sub/portfolio/detail/04_film.html
+++ b/sub/portfolio/detail/04_film.html
@@ -46,14 +46,14 @@
                         </div>
                     </li>
                     <li>
-                        <a href="../../video.html">사업분야</a>
+                        <a href="../../business.html">사업분야</a>
                         <div class="submenu_wrap">
                             <div class="submenu">
                                 <ul>
-                                    <li><a href="../../video.html">영상제작</a></li>
-                                    <li><a href="../../streaming.html">실시간 스트리밍</a></li>
-                                    <li><a href="../../event.html">오프라인 행사</a></li>
-                                    <li><a href="../../marketing.html">홍보 및 마케팅</a></li>
+                                    <li><a href="../../business.html#video">영상제작</a></li>
+                                    <li><a href="../../business.html#event">오프라인 행사</a></li>
+                                    <li><a href="../../business.html#streaming">실시간 스트리밍</a></li>
+                                    <li><a href="../../business.html#marketing">홍보 및 마케팅</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -95,12 +95,12 @@
                                 </li>
                                 <li>
                                     <button></button>
-                                    <a href="../../video.html">사업분야</a>
+                                    <a href="../../business.html">사업분야</a>
                                     <ul class="m_submenu">
-                                        <li><a href="../../video.html">영상제작</a></li>
-                                        <li><a href="../../streaming.html">실시간 스트리밍</a></li>
-                                        <li><a href="../../event.html">오프라인 행사</a></li>
-                                        <li><a href="../../marketing.html">홍보 및 마케팅</a></li>
+                                        <li><a href="../../business.html#video">영상제작</a></li>
+                                        <li><a href="../../business.html#event">실시간 스트리밍</a></li>
+                                        <li><a href="../../business.html#streaming">오프라인 행사</a></li>
+                                        <li><a href="../../business.html#marketing">홍보 및 마케팅</a></li>
                                     </ul>
                                 </li>
                                 <li>
