--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                             <img src="images/main/business_introduce2.png" alt="">
                         </li>
                         <li>
-                            <img src="images/main/business_introduce3.jpg" alt="">
+                            <img src="images/main/business_introduce3.png" alt="">
                         </li>
                         <li>
                             <img src="images/main/business_introduce4.jpg" alt="">
@@ -197,7 +197,7 @@
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <img src="images/main/business_introduce3.jpg" alt="">
+                            <img src="images/main/business_introduce3.png" alt="">
                             <div class="text t3">
                                 <p>실시간스트리밍</p>
                                 <a href="sub/streaming.html">자세히보기</a>
@@ -411,24 +411,17 @@
             <h2>새로운 소식을 빠르게 만날 수 있습니다.</h2>
             <ul class="notice_list">
                 <li>
-                    <a href="#">
+                    <a href="sub/promotion/detail/02_post.html">
                         <strong class="category">공지사항</strong>
                         <p class="txt">파운더 홈페이지 리뉴얼 오픈 안내</p>
-                        <p class="date">2024.1.31</p>
+                        <p class="date">2024.01.10</p>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <strong class="category">뉴스</strong>
-                        <p class="txt">NIPA 우수기업 선정</p>
-                        <p class="date">2023.12.10</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <strong class="category">뉴스</strong>
-                        <p class="txt">하이라이토피아 웹플랫폼 개발</p>
-                        <p class="date">2024.10.20</p>
+                    <a href="sub/promotion/detail/01_post.html">
+                        <strong class="category">공지사항</strong>
+                        <p class="txt">새해 복 많이 받으세요</p>
+                        <p class="date">2024.01.01</p>
                     </a>
                 </li>
             </ul>
