--- a/sub/business.html
+++ b/sub/business.html
@@ -132,7 +132,7 @@
                 <ul>
                     <li id="video">
                         <div>
-                            <img src="../images/main/business_introduce1.png" alt="영상제작">
+                            <img src="../images/main/business_introduce1.jpg" alt="영상제작">
                         </div>
                         <div class="text_box">
                             <h2>영상제작</h2>
@@ -167,7 +167,7 @@
                             <p>기업이나 브랜드의 가치를 대중에게 전달하고 홍보하는 활동을 전문적으로 수행합니다. 타켓 오디언스를 분석하고, 전략전인 커뮤니케이션 계획을 세우며, 다양한 미디어 체널을 활용하여 광고, PR, 소셜 미디어 마케팅 등을 실행합니다. 콘토리아는 디지털 트랜드 변화에 빠르게 대응하며, 데이터 기반의 마케팅 전략을 강화해 나갈 것 입니다.</p>
                         </div>
                         <div>
-                            <img src="../images/main/business_introduce4.png" alt="홍보 및 마케팅">
+                            <img src="../images/main/business_introduce4.jpg" alt="홍보 및 마케팅">
                         </div>
                     </li>
                 </ul>
