--- a/sub/promotion.html
+++ b/sub/promotion.html
@@ -135,7 +135,7 @@
                 <ul id="post_list" data-post_type="post_pr" data-page_int="5" data-posts_per_page="12" data-post_scroll="200"
                     class="pr-list item-list">
                     <li class="notice">
-                        <a href="../sub/promotion/detail/02_post.html">
+                        <a href="promotion/detail/02_post.html">
                             <div class="img"><img src="../images/sub//promotion/promotion1.png" alt="콘토피아 홈페이지 리뉴얼">
                             </div>
                             <p>콘토피아 홈페이지 리뉴얼 오픈 안내</p>
@@ -143,7 +143,7 @@
                         </a>
                     </li>
                     <li class="notice">
-                        <a href="../sub/promotion/detail/01_post.html">
+                        <a href="promotion/detail/01_post.html">
                             <div class="img"><img src="../images/sub/promotion/2024year.png" alt="2024 새해인사">
                             </div>
                             <p>새해복 많이 받으세요</p>
