--- a/sub/promotion/detail/02_post.html
+++ b/sub/promotion/detail/02_post.html
@@ -34,7 +34,7 @@
                 <!-- pc_menu -->
                 <ul class="gnb">
                     <li>
-                        <a href=".././../sub/company.html">회사소개</a>
+                        <a href="../../company.html">회사소개</a>
                         <div class="submenu_wrap">
                             <div class="submenu">
                                 <ul>
@@ -125,16 +125,16 @@
                 <div class="post-view__wrap">
                     <div class="post-view__inner">
                         <div class="post-view__top">
-                            <h3 class="post-view__title">새해 복 많이 받으세요</h3>
+                            <h3 class="post-view__title">콘토피아 홈페이지 리뉴얼 오픈 안내</h3>
                             <div class="cate-box">
                                 <span class="cate">공지사항</span>
                                 <span class="date">2024-01-01</span>
                             </div>
                         </div>
                         <div class="post-view__cont">
-                            <img src="../../../images/sub/promotion/2024year.png" alt="2024년 새해인사">
-                            <p class="has-text-align-center" style="font-size: 22px;"><strong>2024년 청룡띠의 해가 밝았습니다. <br> 새해 복 많이 받으세요.</strong></p>
-                            <p class="has-text-align-center" style="font-size: 16px;">- 콘토피아 임직원 일동 -</p>
+                            <img src="../../../images/sub/promotion/promotion1.png" alt="2024년 새해인사">
+                            <!-- <p class="has-text-align-center" style="font-size: 22px;"><strong>콘토피아 홈페이지가 리뉴얼 오픈 하였습니다.</strong></p> -->
+                            <!-- <p class="has-text-align-center" style="font-size: 16px;"></p> -->
                         </div>
                     </div>
                 </div>
